[package]
name = "rwdv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
seed = "0.8.0"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlBodyElement',
  'Node',
  'NodeList',
  'Window',
  'console'
]
